spade-tests/src/snapshots/spade_tests__ast_lowering__expect_function_got_entity_error_works_stmt.snap
---
source: spade-tests/src/ast_lowering.rs
---
entity x() -> bool {true}

entity test() -> bool {
    x();
    false
}

error: Expected `inst` to instantiate entity
  ┌─ testinput:4:5
  │
1 │ entity x() -> bool {true}
  │ ------ x is defined as an entity here
  ·
4 │     x();
  │     ^
  │     │
  │     Expected `inst`
  │     Because x is an entity
  │
  = Consider adding `inst`
  │
4 │     inst x();
  │     +++++
